Implement prototype of arduino communication

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <java.version>11</java.version>
         <unirest.version>2.3.14</unirest.version>
         <j-serial-comm.version>2.5.1</j-serial-comm.version>
+        <commons-io.version>2.6</commons-io.version>
+        <lombok.version>1.18.8</lombok.version>
     </properties>
 
     <dependencies>
@@ -43,6 +45,20 @@
             <groupId>com.fazecast</groupId>
             <artifactId>jSerialComm</artifactId>
             <version>${j-serial-comm.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
