--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.influxdb</groupId>
+            <artifactId>influxdb-java</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
