--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.kayukin</groupId>
     <artifactId>arduino-proxy</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <name>arduino-proxy</name>
     <description>Connect to arduino by serial port and pass sensors data to server</description>
 
