--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <commons-io.version>2.6</commons-io.version>
         <lombok.version>1.18.8</lombok.version>
         <jacoco.version>0.8.3</jacoco.version>
+        <equalsverifier.version>3.1.9</equalsverifier.version>
     </properties>
 
     <dependencies>
@@ -76,6 +77,13 @@
         <dependency>
             <groupId>org.influxdb</groupId>
             <artifactId>influxdb-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>nl.jqno.equalsverifier</groupId>
+            <artifactId>equalsverifier</artifactId>
+            <version>${equalsverifier.version}</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
