--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,12 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.kayukin</groupId>
-    <artifactId>arduino-proxy</artifactId>
+    <artifactId>influx-web-proxy</artifactId>
     <version>0.1</version>
-    <name>arduino-proxy</name>
-    <description>Connect to arduino by serial port and pass sensors data to server</description>
+    <name>influx-web-proxy</name>
 
     <properties>
         <java.version>11</java.version>
-        <unirest.version>2.3.14</unirest.version>
-        <j-serial-comm.version>2.5.1</j-serial-comm.version>
         <commons-io.version>2.6</commons-io.version>
         <lombok.version>1.18.8</lombok.version>
         <jacoco.version>0.8.3</jacoco.version>
@@ -27,26 +24,17 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.konghq</groupId>
-            <artifactId>unirest-java</artifactId>
-            <version>${unirest.version}</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.fazecast/jSerialComm -->
-        <dependency>
-            <groupId>com.fazecast</groupId>
-            <artifactId>jSerialComm</artifactId>
-            <version>${j-serial-comm.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
